# snimg

./: CMakeLists.txt  README.md
h/: caf.h  snimg.h  system.h
src/: main.cpp  snimg.cpp
